# Sports2D

./: .gitignore  CITATION.cff  OpenPose.ipynb  README.md  logs.txt  pyproject.toml  setup.cfg  setup.py
.github/workflows/: continuous-integration.yml  jekyll-gh-pages.yml  joss_pdf.yml  publish-on-release.yml  python-package.yml  sync_to_hf.yml
Content/: paper.bib  paper.md
Content/website/: build.py  index.html  script.js  style.css
Sports2D/: RTMPose.py  Sports2D.ipynb  Sports2D.py  Sports2D_colab.ipynb  __init__.py  compute_angles.py  detect_pose.py  main.py  poseEstimation.py  postProcessing.py  process.py
Sports2D/Demo/: Calib_demo.toml  Config_demo.toml
Sports2D/Utilities/: .test_blazepose.toml  2D_gait.osim  Blazepose_runsave.py  __init__.py  common.py  config.py  data_processing.py  editing.py  filter.py  person_selector.py  skeletons.py  test_blazepose.py  test_with_RTMPose.py  test_with_RTMPose.toml  test_with_blazepose.toml  tests.py  tests.toml  utilities.py  video_management.py  visualisation.py
