[metadata]
name = sports2d
version = 0.4.6
author = David Pagnon
author_email = contact@david-pagnon.com
description = Detect pose and compute 2D joint angles from a video.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/davidpagnon/Sports2D
keywords = markerless, kinematics, OpenPose, BlazePose, joint angles, 2D, biomechanics, sports, pose estimation, joint angles, sports analytics, kinovea
license = BSD 3-Clause License
license_files = LICENSE
platform = any
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Intended Audience :: Education
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Graphics :: 3D Modeling
project_urls = 
    Bug Tracker = https://github.com/davidpagnon/Sports2D/issues
    
[options]
zip_safe = False
python_requires <= 3.12
install_requires =
    ipython
    toml
    numpy
    pandas>=1.5
    scipy
    anytree
    opencv-python
    matplotlib
    PyQt5
    statsmodels
    rtmlib
    openvino
    tqdm
    imageio_ffmpeg
packages = find:

[options.entry_points]
console_scripts = sports2d = Sports2D.Sports2D:main

[options.package_data]
* = Demo/**/*, Demo/**/**/*

